# roveri

./: pyproject.toml  requirements_dev.txt  tox.ini
.github/workflows/: tests.yml
src/roveri/hardware_controllers/: buzzer_and_ultrasonics.py  buzzer_controller.py  camera_controller.py  distance_sensors_controller.py  imu_controller.py  mockGPIO.py  motors_controller.py  oled_display_controller.py  servos_controller.py
